# compat-patcher-core

./: .appveyor.yml  .pylintrc  .travis.yml  CHANGELOG  MANIFEST.in  README.rst  TODO  cookiecutter.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
compat_patcher/: __init__.py  exceptions.py  import_proxifier.py  readme_generator.py  registry.py  runner.py  utilities.py
doc/: Makefile  _readthedocs-requirements.txt  conf.py  index.rst
docs/: api.rst  conf.py  guidelines.rst  index.rst  make.bat  startup.rst
src/compat_patcher/: __init__.py  registry.py  runner.py  test_scaffolding.py  utilities.py
src/compat_patcher_core/: import_proxifier.py  readme_generator.py  registry.py  runner.py  scaffolding.py  test_scaffolding.py  utilities.py
tests/: dummy_fixers.py  dummy_module.py  test_cookiecutter_recipe.py  test_fixers_registry.py  test_import_proxifier.py  test_patcher_utilities.py  test_patching_registry.py  test_patching_runner.py  test_patching_utilities.py  test_readme_generator.py  test_scaffolding.py
{{cookiecutter.root_directory_name}}/: .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.in  README.rst  generate_readme.py  pytest.ini  requirements_dev.txt  setup.py  tox.ini
{{cookiecutter.root_directory_name}}/src/{{cookiecutter.project_slug}}/: __init__.py  deprecation.py  registry.py
{{cookiecutter.root_directory_name}}/src/{{cookiecutter.project_slug}}/fixers/: __init__.py
{{cookiecutter.root_directory_name}}/tests/: _test_utilities.py  conftest.py  test_scaffolding.py  test_software_fixers.py
